--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2250%22 fill=%22%2322d3ee%22/></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-data-eng</title>
+    <meta name="description" content="Portfolio de Ryan Edwin - Ingénieur Informatique Data & Software" />
+    <title>Ryan Edwin | Portfolio Ingénieur</title>
   </head>
   <body>
     <div id="root"></div>
